# ColorPicker

./: .gitignore  CMakeLists.txt  README.md
_Source/: CMainWindow.cpp  CMainWindow.h  CMainWindowState.cpp  ColorPickerUD.pro  main.cpp
_Source/CButton/: CPushButton_Pick.cpp  CPushButton_Pick.h  CPushButton_Sta.cpp  CPushButton_Sta.h  CRadioButton_Mode.cpp  CRadioButton_Mode.h
_Source/CDialog/: CConfig.cpp  CConfig.h  CMessage.cpp  CMessage.h
_Source/CGeneral/: CCore.cpp  CCore.h  CStyle.cpp  CStyle.h
_Source/CInput/: CDoubleSpinBox.cpp  CDoubleSpinBox.h  CDoubleSpinBox_Info.cpp  CDoubleSpinBox_Info.h  CDoubleSpinBox_Space.cpp  CDoubleSpinBox_Space.h
_Source/CLabel/: CLabel_Mask.cpp  CLabel_Mask.h  CLabel_Title.cpp  CLabel_Title.h
_Source/CMacro/: CAccessor.h  CError.h  CSignal.h
_Source/CMenu/: CMenu_Main.cpp  CMenu_Main.h
_Source/CWidget/: CWidget_Block.cpp  CWidget_Block.h  CWidget_Blocks.cpp  CWidget_Blocks.h  CWidget_Slot.cpp  CWidget_Slot.h  CWidget_Slots.cpp  CWidget_Slots.h
_Source/CWindow/: CMagnifier.cpp  CMagnifier.h  CMainWindowConfig.cpp  CMainWindowInit.cpp  CMainWindowLink.cpp  CMainWindowUI.cpp  CMainWindowUI.h
_Source/_Resource/Button/: _Button.qrc
_Source/_Resource/Checker/: _Checker.qrc
_Source/_Resource/Direction/: _Direction.qrc
_Source/_Resource/Font/: _Font.qrc
_Source/_Resource/Logo/: _Logo.qrc  _Logo.rc
